--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 
 
 
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
